Fix CORS URL Vercel

--- a/.env
+++ b/.env
@@ -6,11 +6,12 @@ DB_DATABASE=bdsistema_academico
 DB_PORT=5432
 
 # Prisma Database URLs
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/bdsistema_academico?schema=public"
-DIRECT_URL="postgresql://postgres:1234@localhost:5432/bdsistema_academico?schema=public"
-
+DATABASE_URL="postgresql://postgres.nsmpnclmoyqwwnpxfzrt:bdSistema25.@aws-0-us-west-2.pooler.supabase.com:5432/postgres"
+DIRECT_URL="postgresql://postgres.nsmpnclmoyqwwnpxfzrt:bdSistema25.@aws-0-us-west-2.pooler.supabase.com:5432/postgres"
 # JWT Secret
 JWT_SECRET=tu_clave_secreta_super_segura_cambiala_en_produccion_123456
 
 # Puerto
 PORT=3000
+
+GEMINI_API_KEY=AIzaSyBkMcFBCjwayIW10VOkSo5HXre5wyBUYbg
